Fixed gap space in Button Group

--- a/components/btngroup/BtnGroup.module.scss
+++ b/components/btngroup/BtnGroup.module.scss
@@ -1,6 +1,8 @@
 @import '../btnlink/BtnLink.module.scss';
 
 .BtnGroup {
+	display: block;
+
 	* + * {
 		margin-left: 0.5rem;
 	}
