--- a/components/featurelist/FeatureList.module.scss
+++ b/components/featurelist/FeatureList.module.scss
@@ -37,7 +37,7 @@
 		gap: 0.5rem;
 	}
 	@include tablet-h {
-		grid-template-columns: 80px 1fr;
+		grid-template-columns: 100px 1fr;
 		text-align: left;
 		gap: 0;
 	}
